syntax = "proto3";

package group;

option java_package = "com.gitlab.leonklein.group";
option java_multiple_files = true;

import "group/group.proto";

message CreateGroupRequest {
  Group group = 1;
}

message CreateGroupResponse {
  Group group = 1;
}

message UpdateGroupRequest {
  Group group = 1;
}

message UpdateGroupResponse {
  Group group = 1;
}

message ListGroupRequest{}

message ListGroupResponse {
  repeated Group group = 1;
}

message FindGroupRequest{
  string name = 1;
}

message FindGroupResponse {
  Group group = 1;
}

service GroupService {
  rpc Create(CreateGroupRequest) returns (CreateGroupResponse);
  rpc Update(UpdateGroupRequest) returns (UpdateGroupResponse);
  rpc List(ListGroupRequest) returns (ListGroupResponse);
  rpc Find(FindGroupRequest) returns (FindGroupResponse);
}